# lavender

./: .gitignore  Cargo.toml  README.md  vercel.json
.github/workflows/: build.yml  vercel.yml
api/: api.rs  server.rs  srv.rs
core/: lib.rs
server/: README.md
server/templates/features/file/: yy.js
src/: lib.rs  server.rs  vercel.rs
src/features/: file.rs
templates/: index.html
templates/file_cabinets/: script.js  yy.js
templates/temp/: script.js
vercel/: Cargo.toml  README.md
vercel/api/: axum.rs  server.rs  vercel.rs
vercel/core/: lib.rs
vercel/templates/assets/: script.js  style.css
