[package]
name = "app"
version = "1.0.0"
edition = "2024"

[dependencies]
vercel_runtime = { version = "2", features = ["axum"], optional = true }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.8" }
axum-streams = { version = "0.24", features = ["json", "text"] }
tower = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8"
askama = "0.15"
rand = "0.10"
axum-extra = { version = "0.12", features = ["typed-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls"] }
serde_urlencoded = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"], optional = true }

[lib]
path = "core/lib.rs"

[[bin]]
name = "srv"
path = "api/srv.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[features]
default = ["serverless"]
serverless = ["sqlx/postgres", "vercel_runtime"]
server = ["sqlx/sqlite" , "axum/multipart", "tokio-util"]
