[package]
name = "vercel-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
vercel_runtime = { version = "2", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.8" }
axum-streams = { version = "0.24", features = ["json", "text"] }
tower = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8"
askama = "0.15"
mime_guess = "2"

[[bin]]
name = "axum"
path = "api/axum.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
